Programación de los scripts

--- a/html/cotizacion.html
+++ b/html/cotizacion.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/estilosCotizacion.css">
+    <script src="/js/cotizacion.js"></script>
     <title>Cotización</title>
 </head>
 <body>
@@ -14,11 +15,11 @@
     <div id="contenedor">
         <div class="contenido">
             <label for="">Valor del automóvil</label><br>
-            <input type="text" name="Cantidad" id="Cantidad">
+            <input type="text" name="cantidad" id="Cantidad">
         </div>
         <div class="contenido">
             <label for="">Enganche</label><br>
-            <input type="text" name="Enganche" id="Enganche">
+            <input type="text" name="enganche" id="Enganche">
         </div>
         <div class="contenido">
             <label for="">Total a financiar</label><br>
@@ -26,7 +27,7 @@
         </div>
         <div class="contenido">
             <label for="" class="contenido">Planes de crédito</label>
-            <select name="Planes" id="Planes">
+            <select name="planes" id="PlanesM">
                 <option value="12">12 Meses</option>
                 <option value="18">18 Meses</option>
                 <option value="24">24 Meses</option>
@@ -36,11 +37,11 @@
         </div>
         <div class="contenido">
             <label for="">Pago Mensual</label><br>
-            <input type="text" name="PagoM" id="PagoM">
+            <input type="text" name="PagoM" id="PagoM" readonly>
         </div>
-        <div class="contenido">
-            <button id="btnLimpiar" class="boton">Limpiar</button>
-            <button id="btnCotizar" class="boton">Cotizar</button>
+        <div class="contenidoBtn">
+            <button id="btnLimpiar" class="boton" onclick="Limpiar()">Limpiar</button>
+            <button id="btnCotizar" class="boton" onclick="Cotizar()">Cotizar</button>
         </div>
 
     </div>
